--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,11 +1,17 @@
 header {
 
-  width: calc(100vw - 2px);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  gap: 10px;
+
   height: 70px;
 
-  padding: 10px 0;
+  padding: 0 30px;
 
-  margin: 0;
+  margin-bottom: 20px;
 
   border-bottom: 2px solid rgba(16, 16, 24, 0.2);
 
@@ -50,8 +56,6 @@ header {
       align-items: center;
   
       height: 100%;
-  
-      padding: 0 20px;
 
   }
 
